infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
       - name: payments
         image: ashot72/payments
---
apiVersion: v1
kind: Service
metadata: 
  name: payments-srv
spec:
  selector:
    app: payments
  ports:
   - name: payments
     protocol: TCP
     port: 3000
     targetPort: 3000
