infra/k8s/products-mongo-depl.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: products-mongo-depl
spec:
  replicas: 1
  serviceName: products-mongo
  selector:
    matchLabels:
      app: products-mongo
  template:
    metadata:
      labels:
        app: products-mongo
    spec:     
      containers:
       - name: products-mongo
         image: mongo  
         volumeMounts:
          - name: products-mongo-storage
            mountPath: '/data/db'            
      volumes:
        - name: products-mongo-storage
          persistentVolumeClaim:
            claimName: products-claim
---
apiVersion: v1
kind: Service
metadata:
  name: products-mongo-srv
spec:
  selector:
    app: products-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
